# sinkmap-ph

./: .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
docs/: setup-earthdata.md
docs/findings/: SUMMARY.md  batch-status.md  feasibility.json  feasibility.md  flood-overlay.md  metro-manila-v1.md  patterns.md  phase2-multicity.md  scale-out-plan.md
docs/planning/: BUILD-PROMPT.md  CITIES.md  METHOD-decomposition.md  SCOPE.md
pipeline/: _gee_init.py  aoi.py  cities.json
pipeline/flood/: flood_events.json  flood_extent.py
pipeline/insar/: _edl.py  autoref.py  burst.py  download.py  lean_fetch.py  process.py  search.py  submit_hyp3.py  validate.py  velocity.py
pipeline/overlay/: overlap.py
scripts/: analysis.py  batch.py  dig_newcities.py  dig_timing.py  feasibility.py  make_exposure.py  make_finding_layers.py  make_flood_layers.py  make_web_layers.py  record_demo.py  record_sink_lapse.py
tests/: e2e.sh  test_phase0.py
web/: index.html  methodology.html  serve.py
web/data/: cities.json  findings.json  flood-layers.json
web/data/exposure/: cebu-mandaue.geojson  iloilo.geojson  metro-manila-flood.geojson  metro-manila.geojson
web/data/flood/: carina-habagat-2024.json  kristine-trami-2024.json  monsoon-2025.json
web/data/overlay/: cebu-mandaue-25yr.json  iloilo-25yr.json  metro-manila-25yr.json
