[project]
name = "sinkmap-ph"
version = "0.0.1"
description = "Land-subsidence InSAR map of Philippine cities, overlaid on recent flooding."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Xavier Puspus", email = "xpuspus@gmail.com" }]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
